<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PuzzleRowColSettingActivity">

    <EditText
        android:id="@+id/et_row"
        android:hint="@string/please_input_row_count"
        android:inputType="number"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="80dp"/>
    <EditText
        android:id="@+id/et_col"
        android:hint="@string/please_input_column_count"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/et_row"
        android:layout_width="match_parent"
        android:layout_height="80dp"/>
    <Button
        android:id="@+id/bt_cancel"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_col"
        app:layout_constraintRight_toLeftOf="@+id/bt_ok"
        android:layout_width="0dp"
        android:layout_height="80dp"/>
    <Button
        android:id="@+id/bt_ok"
        android:text="@string/ok"
        app:layout_constraintLeft_toRightOf="@+id/bt_cancel"
        app:layout_constraintTop_toBottomOf="@+id/et_col"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="80dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>